--- a/app/assets/stylesheets/_checklist.css.scss
+++ b/app/assets/stylesheets/_checklist.css.scss
@@ -58,11 +58,13 @@ h2 {
   font-weight: 800;
   font-size: em(53, 20);
   color: $grey_text;
+  letter-spacing: -0.05em; 
 }
 
 h3 {
   font-weight: 300;
   font-size: em(40, 20);
+  letter-spacing: -0.04em;
   color: $red;
 }
 
