--- a/app/views/pages/checklist.html.erb
+++ b/app/views/pages/checklist.html.erb
@@ -34,6 +34,9 @@
       <p class="blog-text"><span class="capital_letter">A</span>pplying for the <span class="italics"><a>design apprenticeship</a></span> was certainly the best decision for becoming a better craftsman. The high value <span class="italics">smashbot</span> puts into learning and educating each other creates an excellent environment for expanding your
       knowledge and to professionalize your skills. </p>
     </div>
+    <div class="homer-background">
+      <%= image_tag "Homer-complex-car.jpg", :class => "homer-icon" %>
+    </div>
 
       <%= yield %>
     </div>
