--- a/app/views/pages/checklist.html.erb
+++ b/app/views/pages/checklist.html.erb
@@ -38,7 +38,127 @@
       <%= image_tag "Homer-complex-car.jpg", :class => "homer-icon" %>
     </div>
 
+    <div class="fourth-block">
+      
+      <ul>
+
+      <div class="wrapper"> 
+        <div class="check-ordinals">
+          <li class="ordinals"><span class="ordinal-letter">1</span>irst</li>
+        </div>
+        <div class="check-lines">
+          <li class="list">Hop on the <strong>trail map</strong></li>
+        </div>
+      </div>
+
+      <div class="wrapper">
+        <div class="check-ordinals">
+          <li class="ordinals"><span class="ordinal-letter">2</span>econd</li>
+        </div>
+        <div class="check-lines">
+          <li class="list">Get dangerous at <strong>typography</strong></li>
+        </div>
+      </div>
+
+      <div class="wrapper">
+        <div class="check-ordinals">
+          <li class="ordinals"><span class="ordinal-letter">3</span>hird</li>
+        </div>
+        <div class="check-lines">
+          <li class="list">Catch yourself ranting about bad typefaces in a restaurant</li>
+        </div>
+      </div>
+
+      <div class="wrapper">
+        <div class="check-ordinals">
+          <li class="ordinals"><span class="ordinal-letter">4</span>ourth</li>
+        </div>
+        <div class="check-lines">
+          <li class="list">Know thy <strong>grids</strong></li>
+        </div>
+      </div>
+
+      <div class="wrapper">
+        <div class="check-ordinals">
+          <li class="ordinals"><span class="ordinal-letter">5</span>ifth</li>
+        </div>
+        <div class="check-lines">
+          <li class="list">Know thy <strong>color wheel</strong></li>
+        </div>
+      </div>
+
+      <div class="wrapper">
+        <div class="check-ordinals">
+          <li class="ordinals"><span class="ordinal-letter">6</span>ixth</li>
+        </div>
+        <div class="check-lines">
+          <li class="list">Annoy friends and family with <strong>design principles</strong></li>
+        </div>
+      </div>
+
+      <div class="wrapper">
+        <div class="check-ordinals">
+          <li class="ordinals"><span class="ordinal-letter">7</span>eventh</li>
+        </div>
+        <div class="check-lines">
+          <li class="list">Start using <strong>Bourbon & Neat</strong></li>
+        </div>
+      </div>
+
+      <div class="wrapper">
+        <div class="check-ordinals">
+          <li class="ordinals"><span class="ordinal-letter">8</span>igth</li>
+        </div>
+        <div class="check-lines">
+          <li class="list">Get offended by unsemantic <strong>HTML / CSS</strong></li>
+        </div>
+      </div>
+
+      <div class="wrapper">
+        <div class="check-ordinals">
+          <li class="ordinals"><span class="ordinal-letter">9</span>inth</li>
+        </div>
+        <div class="check-lines">
+          <li class="list">Design a <strong>pet project </strong>and ask for feedback</li>
+        </div>
+      </div>
+
+      <div class="wrapper">
+        <div class="check-ordinals">
+          <li class="ordinals"><span class="ordinal-letter">10</span>enth</li>
+        </div>
+        <div class="check-lines">
+          <li class="list">Get more access to the <strong>Team</strong> through <strong>PRIME</strong></li>
+        </div>
+      </div>
+
+      <div class="wrapper">
+        <div class="check-ordinals">
+          <li class="ordinals"><span class="ordinal-letter">11</span>leventh</li>
+        </div>
+        <div class="check-lines">
+          <li class="list">Do the online / offline <strong>“Design for Developers” </strong>workshop</li>
+        </div>
+      </div>
+
+      <div class="wrapper">
+        <div class="check-ordinals">
+          <li class="ordinals"><span class="ordinal-letter">12</span>welfth</li>
+        </div>
+        <div class="check-lines">
+          <li class="list"><strong>Enjoy the process!</strong></li>
+        </div>
+      </div>
+      
+      </ul>
+    </div>
+
       <%= yield %>
+
+    </div>
+    <div class="border-bottom">
+      <div class="copyright"><p>© 2013 smashbot, inc. The design of a robot and smashbot are registered trademarks of smashbot, inc.</p> 
+      </div>
     </div>
 </body>
 </html>
