--- a/app/views/pages/checklist.html.erb
+++ b/app/views/pages/checklist.html.erb
@@ -47,7 +47,7 @@
           <li class="ordinals"><span class="ordinal-letter">1</span>irst</li>
         </div>
         <div class="check-lines">
-          <li class="list">Hop on the <strong>trail map</strong></li>
+          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Hop on the <strong><a>trail map</a></strong></li>
         </div>
       </div>
 
@@ -56,7 +56,7 @@
           <li class="ordinals"><span class="ordinal-letter">2</span>econd</li>
         </div>
         <div class="check-lines">
-          <li class="list">Get dangerous at <strong>typography</strong></li>
+          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Get dangerous at <strong><a>typography</a></strong></li>
         </div>
       </div>
 
@@ -65,7 +65,7 @@
           <li class="ordinals"><span class="ordinal-letter">3</span>hird</li>
         </div>
         <div class="check-lines">
-          <li class="list">Catch yourself ranting about bad typefaces in a restaurant</li>
+          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Catch yourself ranting about bad typefaces in a restaurant</li>
         </div>
       </div>
 
@@ -74,7 +74,7 @@
           <li class="ordinals"><span class="ordinal-letter">4</span>ourth</li>
         </div>
         <div class="check-lines">
-          <li class="list">Know thy <strong>grids</strong></li>
+          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Know thy <strong><a>grids</a></strong></li>
         </div>
       </div>
 
@@ -83,7 +83,7 @@
           <li class="ordinals"><span class="ordinal-letter">5</span>ifth</li>
         </div>
         <div class="check-lines">
-          <li class="list">Know thy <strong>color wheel</strong></li>
+          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Know thy <strong><a>color wheel</a></strong></li>
         </div>
       </div>
 
@@ -92,7 +92,7 @@
           <li class="ordinals"><span class="ordinal-letter">6</span>ixth</li>
         </div>
         <div class="check-lines">
-          <li class="list">Annoy friends and family with <strong>design principles</strong></li>
+          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Annoy friends and family with <strong><a>design principles</a></strong></li>
         </div>
       </div>
 
@@ -101,7 +101,7 @@
           <li class="ordinals"><span class="ordinal-letter">7</span>eventh</li>
         </div>
         <div class="check-lines">
-          <li class="list">Start using <strong>Bourbon & Neat</strong></li>
+          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Start using <strong><a>Bourbon<a/> & <a>Neat</a></strong></li>
         </div>
       </div>
 
@@ -110,7 +110,7 @@
           <li class="ordinals"><span class="ordinal-letter">8</span>igth</li>
         </div>
         <div class="check-lines">
-          <li class="list">Get offended by unsemantic <strong>HTML / CSS</strong></li>
+          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Get offended by unsemantic <strong><a>HTML</a> / <a>CSS</a></strong></li>
         </div>
       </div>
 
@@ -119,7 +119,7 @@
           <li class="ordinals"><span class="ordinal-letter">9</span>inth</li>
         </div>
         <div class="check-lines">
-          <li class="list">Design a <strong>pet project </strong>and ask for feedback</li>
+          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Design a <strong><a>pet project</a> </strong>and ask for feedback</li>
         </div>
       </div>
 
@@ -128,7 +128,7 @@
           <li class="ordinals"><span class="ordinal-letter">10</span>enth</li>
         </div>
         <div class="check-lines">
-          <li class="list">Get more access to the <strong>Team</strong> through <strong>PRIME</strong></li>
+          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Get more access to the <strong><a>Team</a></strong> through <strong><a>PRIME</a></strong></li>
         </div>
       </div>
 
@@ -137,7 +137,7 @@
           <li class="ordinals"><span class="ordinal-letter">11</span>leventh</li>
         </div>
         <div class="check-lines">
-          <li class="list">Do the online / offline <strong>“Design for Developers” </strong>workshop</li>
+          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Do the online / offline <strong><a>“Design for Developers”</a> </strong>workshop</li>
         </div>
       </div>
 
@@ -146,7 +146,7 @@
           <li class="ordinals"><span class="ordinal-letter">12</span>welfth</li>
         </div>
         <div class="check-lines">
-          <li class="list"><strong>Enjoy the process!</strong></li>
+          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %><strong>Enjoy the process!</strong></li>
         </div>
       </div>
       
