--- a/app/views/pages/checklist.html.erb
+++ b/app/views/pages/checklist.html.erb
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -30,7 +29,7 @@
     </div>
     
     <div class="third-line">
-      <h5 class="date">06/10/2013</h5>
+      <h5 class="date">06/27/2013</h5>
       <p class="blog-text"><span class="capital_letter">A</span>pplying for the <span class="italics"><a>design apprenticeship</a></span> was certainly the best decision for becoming a better craftsman. The high value <span class="italics">smashbot</span> puts into learning and educating each other creates an excellent environment for expanding your
       knowledge and to professionalize your skills. </p>
     </div>
@@ -47,7 +46,7 @@
           <li class="ordinals"><span class="ordinal-letter">1</span>irst</li>
         </div>
         <div class="check-lines">
-          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Hop on the <strong><a>trail map</a></strong></li>
+          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Hop on the <strong><%= link_to "trail map", "http://learn.thoughtbot.com/trails", :target => "_blank" %></strong></li>
         </div>
       </div>
 
@@ -56,7 +55,7 @@
           <li class="ordinals"><span class="ordinal-letter">2</span>econd</li>
         </div>
         <div class="check-lines">
-          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Get dangerous at <strong><a>typography</a></strong></li>
+          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Get dangerous at <strong><%= link_to "typography", "http://learn.thoughtbot.com/typography/", :target => "_blank" %></a></strong></li>
         </div>
       </div>
 
@@ -74,7 +73,7 @@
           <li class="ordinals"><span class="ordinal-letter">4</span>ourth</li>
         </div>
         <div class="check-lines">
-          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Know thy <strong><a>grids</a></strong></li>
+          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Know thy <strong><%= link_to "grids", "http://learn.thoughtbot.com/grids/", :target => "_blank" %></strong></li>
         </div>
       </div>
 
@@ -83,7 +82,7 @@
           <li class="ordinals"><span class="ordinal-letter">5</span>ifth</li>
         </div>
         <div class="check-lines">
-          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Know thy <strong><a>color wheel</a></strong></li>
+          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Know thy <strong><%= link_to "color wheel", "http://learn.thoughtbot.com/design/", :target => "_blank" %></a></strong></li>
         </div>
       </div>
 
@@ -92,7 +91,7 @@
           <li class="ordinals"><span class="ordinal-letter">6</span>ixth</li>
         </div>
         <div class="check-lines">
-          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Annoy friends and family with <strong><a>design principles</a></strong></li>
+          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Annoy friends and family with <strong><%= link_to "design principles", "http://learn.thoughtbot.com/visual-principles", :target => "_blank" %></strong></li>
         </div>
       </div>
 
@@ -101,7 +100,7 @@
           <li class="ordinals"><span class="ordinal-letter">7</span>eventh</li>
         </div>
         <div class="check-lines">
-          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Start using <strong><a>Bourbon<a/> & <a>Neat</a></strong></li>
+          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Start using <strong><%= link_to "Bourbon", "http://bourbon.io/", :target => "_blank" %> & <%= link_to "Neat", "http://neat.bourbon.io/", :target => "_blank" %></strong></li>
         </div>
       </div>
 
@@ -110,7 +109,7 @@
           <li class="ordinals"><span class="ordinal-letter">8</span>igth</li>
         </div>
         <div class="check-lines">
-          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Get offended by unsemantic <strong><a>HTML</a> / <a>CSS</a></strong></li>
+          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Get offended by unsemantic <strong><%= link_to "HTML", "http://nicolasgallagher.com/about-html-semantics-front-end-architecture/", :target => "_blank" %> / <%= link_to "CSS", "http://ianstormtaylor.com/oocss-plus-sass-is-the-best-way-to-css/", :target => "_blank" %></strong></li>
         </div>
       </div>
 
@@ -128,7 +127,7 @@
           <li class="ordinals"><span class="ordinal-letter">10</span>enth</li>
         </div>
         <div class="check-lines">
-          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Get more access to the <strong><a>Team</a></strong> through <strong><a>PRIME</a></strong></li>
+          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Get more access to the <strong><%= link_to "Team", "http://www.thoughtbot.com/about/", :target => "_blank" %></strong> through <strong><%= link_to "PRIME", "http://learn.thoughtbot.com/prime/", :target => "_blank" %></strong></li>
         </div>
       </div>
 
@@ -137,7 +136,7 @@
           <li class="ordinals"><span class="ordinal-letter">11</span>leventh</li>
         </div>
         <div class="check-lines">
-          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Do the online / offline <strong><a>“Design for Developers”</a> </strong>workshop</li>
+          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Do the online / offline <strong><%= link_to "“Design for Developers”", "https://learn.thoughtbot.com/workshops/19-design-for-developers/", :target => "_blank" %> </strong>workshop</li>
         </div>
       </div>
 
