--- a/app/views/pages/checklist.html.erb
+++ b/app/views/pages/checklist.html.erb
@@ -10,142 +10,200 @@
   <div class="border-top"></div>
   <div class="content">
 
-    <div class="first-line">
-      <h1 class="logo-text"><a>smashbot</a></h1>
-        <ul class="blog-tags">
-          <li><h5><a>apprentice.io</a></h5></li>
-          <li><h5><a>design</a></h5></li>
-          <li><h5><a>checklist</a></h5></li>
-        </ul>
-    </div>
+      <div class="first-line">
+        <h1 class="logo-text"><a>smashbot</a></h1>
+          <section>
+            <ul class="blog-tags">
+              <li><h5><a>apprentice.io</a></h5></li>
+              <li><h5><a>design</a></h5></li>
+              <li><h5><a>checklist</a></h5></li>
+            </ul>
+          </section>
+      </div>
     
     <div class="second-line">
       <div class="logo-background">
-      <%= image_tag "smashbot-logo.png", :class => "logo-icon" %>
+      <figure>
+        <%= image_tag "smashbot-logo.png", :class => "logo-icon" %>
+      </figure>
       </div>
-      <h2 class="title">How to become a design apprentice</h2>
-      <h3 class="subtitle">Checklist for future apprentices</h3>
-      <h6 class="blogger-name"><a>ed wassermann</a></h6>
+      <section>
+        <h2 class="title">How to become a design apprentice</h2>
+        <h3 class="subtitle">Checklist for future apprentices</h3>
+        <h6 class="blogger-name"><a>ed wassermann</a></h6>
+      </section>
     </div>
     
-    <div class="third-line">
-      <h5 class="date">06/27/2013</h5>
-      <p class="blog-text"><span class="capital_letter">A</span>pplying for the <span class="italics"><a>design apprenticeship</a></span> was certainly the best decision for becoming a better craftsman. The high value <span class="italics">smashbot</span> puts into learning and educating each other creates an excellent environment for expanding your
-      knowledge and to professionalize your skills. </p>
-    </div>
+      <div class="third-line">
+        <h5 class="date">06/27/2013</h5>
+        <article>
+          <p class="blog-text"><span class="capital_letter">A</span>pplying for the <span class="italics"><a>design apprenticeship</a></span> was certainly the best decision for becoming a better craftsman. The high value <span class="italics">smashbot</span> puts into learning and educating each other creates an excellent environment for expanding your
+          knowledge and to professionalize your skills. 
+          </p>
+        </article>
+      </div>
     <div class="homer-background">
-      <%= image_tag "Homer-complex-car.jpg", :class => "homer-icon" %>
+      <figure>
+        <%= image_tag "Homer-complex-car.jpg", :class => "homer-icon" %>
+      </figure>
     </div>
 
     <div class="fourth-block">
-      
       <ul>
 
       <div class="wrapper"> 
-        <div class="check-ordinals">
-          <li class="ordinals"><span class="ordinal-letter">1</span>irst</li>
-        </div>
+          <div class="check-ordinals">
+            <aside>
+              <li class="ordinals"><span class="ordinal-letter">1</span>irst</li>
+            </aside>
+          </div>
         <div class="check-lines">
-          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Hop on the <strong><%= link_to "trail map", "http://learn.thoughtbot.com/trails", :target => "_blank" %></strong></li>
+          <article>
+            <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Hop on the <strong><%= link_to "trail map", "http://learn.thoughtbot.com/trails", :target => "_blank" %></strong></li>
+          </article>
         </div>
       </div>
 
       <div class="wrapper">
         <div class="check-ordinals">
-          <li class="ordinals"><span class="ordinal-letter">2</span>econd</li>
+          <aside>
+            <li class="ordinals"><span class="ordinal-letter">2</span>econd</li>
+          </aside>
         </div>
         <div class="check-lines">
-          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Get dangerous at <strong><%= link_to "typography", "http://learn.thoughtbot.com/typography/", :target => "_blank" %></a></strong></li>
+          <article>
+            <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Get dangerous at <strong><%= link_to "typography", "http://learn.thoughtbot.com/typography/", :target => "_blank" %></a></strong></li>
+          </article>
         </div>
       </div>
 
       <div class="wrapper">
         <div class="check-ordinals">
-          <li class="ordinals"><span class="ordinal-letter">3</span>hird</li>
+          <aside>
+            <li class="ordinals"><span class="ordinal-letter">3</span>hird</li>
+          </aside>
         </div>
         <div class="check-lines">
-          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Catch yourself ranting about bad typefaces in a restaurant</li>
+          <article>
+            <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Catch yourself ranting about bad typefaces in a restaurant</li>
+          </article>
         </div>
       </div>
 
       <div class="wrapper">
         <div class="check-ordinals">
-          <li class="ordinals"><span class="ordinal-letter">4</span>ourth</li>
+          <aside>
+            <li class="ordinals"><span class="ordinal-letter">4</span>ourth</li>
+          </aside>
         </div>
         <div class="check-lines">
-          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Know thy <strong><%= link_to "grids", "http://learn.thoughtbot.com/grids/", :target => "_blank" %></strong></li>
+          <article>
+            <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Know thy <strong><%= link_to "grids", "http://learn.thoughtbot.com/grids/", :target => "_blank" %></strong></li>
+          </article>
         </div>
       </div>
 
       <div class="wrapper">
         <div class="check-ordinals">
-          <li class="ordinals"><span class="ordinal-letter">5</span>ifth</li>
+          <aside>
+            <li class="ordinals"><span class="ordinal-letter">5</span>ifth</li>
+          </aside>
         </div>
         <div class="check-lines">
-          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Know thy <strong><%= link_to "color wheel", "http://learn.thoughtbot.com/design/", :target => "_blank" %></a></strong></li>
+          <article>
+            <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Know thy <strong><%= link_to "color wheel", "http://learn.thoughtbot.com/design/", :target => "_blank" %></a></strong></li>
+          </article>
         </div>
       </div>
 
       <div class="wrapper">
         <div class="check-ordinals">
-          <li class="ordinals"><span class="ordinal-letter">6</span>ixth</li>
+          <aside>
+            <li class="ordinals"><span class="ordinal-letter">6</span>ixth</li>
+          </aside>
         </div>
         <div class="check-lines">
-          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Annoy friends and family with <strong><%= link_to "design principles", "http://learn.thoughtbot.com/visual-principles", :target => "_blank" %></strong></li>
+          <article>
+            <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Annoy friends and family with <strong><%= link_to "design principles", "http://learn.thoughtbot.com/visual-principles", :target => "_blank" %></strong></li>
+          </article>
         </div>
       </div>
 
       <div class="wrapper">
         <div class="check-ordinals">
-          <li class="ordinals"><span class="ordinal-letter">7</span>eventh</li>
+          <aside>
+            <li class="ordinals"><span class="ordinal-letter">7</span>eventh</li>
+          </aside>
         </div>
         <div class="check-lines">
-          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Start using <strong><%= link_to "Bourbon", "http://bourbon.io/", :target => "_blank" %> & <%= link_to "Neat", "http://neat.bourbon.io/", :target => "_blank" %></strong></li>
+          <article>
+            <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Start using <strong><%= link_to "Bourbon", "http://bourbon.io/", :target => "_blank" %> & <%= link_to "Neat", "http://neat.bourbon.io/", :target => "_blank" %></strong></li>
+          </article>
         </div>
       </div>
 
       <div class="wrapper">
         <div class="check-ordinals">
-          <li class="ordinals"><span class="ordinal-letter">8</span>igth</li>
+          <aside>
+            <li class="ordinals"><span class="ordinal-letter">8</span>igth</li>
+          </aside>
         </div>
         <div class="check-lines">
-          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Get offended by unsemantic <strong><%= link_to "HTML", "http://nicolasgallagher.com/about-html-semantics-front-end-architecture/", :target => "_blank" %> / <%= link_to "CSS", "http://ianstormtaylor.com/oocss-plus-sass-is-the-best-way-to-css/", :target => "_blank" %></strong></li>
+          <article>
+            <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Get offended by unsemantic <strong><%= link_to "HTML", "http://nicolasgallagher.com/about-html-semantics-front-end-architecture/", :target => "_blank" %> / <%= link_to "CSS", "http://ianstormtaylor.com/oocss-plus-sass-is-the-best-way-to-css/", :target => "_blank" %></strong></li>
+          </article>
         </div>
       </div>
 
       <div class="wrapper">
         <div class="check-ordinals">
-          <li class="ordinals"><span class="ordinal-letter">9</span>inth</li>
+          <aside>
+            <li class="ordinals"><span class="ordinal-letter">9</span>inth</li>
+          </aside>
         </div>
         <div class="check-lines">
-          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Design a <strong><a>pet project</a> </strong>and ask for feedback</li>
+          <article>
+            <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Design a <strong><a>pet project</a> </strong>and ask for feedback</li>
+          </article>
         </div>
       </div>
 
       <div class="wrapper">
         <div class="check-ordinals">
-          <li class="ordinals"><span class="ordinal-letter">10</span>enth</li>
+          <aside>
+            <li class="ordinals"><span class="ordinal-letter">10</span>enth</li>
+          </aside>
         </div>
         <div class="check-lines">
-          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Get more access to the <strong><%= link_to "Team", "http://www.thoughtbot.com/about/", :target => "_blank" %></strong> through <strong><%= link_to "PRIME", "http://learn.thoughtbot.com/prime/", :target => "_blank" %></strong></li>
+          <article>
+            <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Get more access to the <strong><%= link_to "Team", "http://www.thoughtbot.com/about/", :target => "_blank" %></strong> through <strong><%= link_to "PRIME", "http://learn.thoughtbot.com/prime/", :target => "_blank" %></strong></li>
+          </article>
         </div>
       </div>
 
       <div class="wrapper">
         <div class="check-ordinals">
-          <li class="ordinals"><span class="ordinal-letter">11</span>leventh</li>
+          <aside>
+            <li class="ordinals"><span class="ordinal-letter">11</span>leventh</li>
+          </aside>
         </div>
         <div class="check-lines">
-          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Do the online / offline <strong><%= link_to "“Design for Developers”", "https://learn.thoughtbot.com/workshops/19-design-for-developers/", :target => "_blank" %> </strong>workshop</li>
+          <article>
+            <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %>Do the online / offline <strong><%= link_to "“Design for Developers”", "https://learn.thoughtbot.com/workshops/19-design-for-developers/", :target => "_blank" %> </strong>workshop</li>
+          </article>
         </div>
       </div>
 
       <div class="wrapper">
         <div class="check-ordinals">
-          <li class="ordinals"><span class="ordinal-letter">12</span>welfth</li>
+          <aside>
+            <li class="ordinals"><span class="ordinal-letter">12</span>welfth</li>
+          </aside>
         </div>
         <div class="check-lines">
-          <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %><strong>Enjoy the process!</strong></li>
+          <article>
+            <li class="list"><%= image_tag "red-line.jpg", :class => "red-line" %><strong>Enjoy the process!</strong></li>
+          </article>
         </div>
       </div>
       
