--- a/app/views/pages/checklist.html.erb
+++ b/app/views/pages/checklist.html.erb
@@ -48,7 +48,9 @@
       </figure>
     </div>
 
+
     <div class="fourth-block">
+      <section>
       <ul>
 
       <div class="wrapper"> 
@@ -208,6 +210,7 @@
       </div>
       
       </ul>
+      </section>
     </div>
 
       <%= yield %>
