--- a/app/assets/stylesheets/_checklist.css.scss
+++ b/app/assets/stylesheets/_checklist.css.scss
@@ -110,15 +110,12 @@ h5, .blogger-name {
   padding-left: 10px;
 }
 
-.logo-text {
-}
-
 
 
 //******************** PARAGRAPHS ************
 
 .blog-text {
-  font-family: 'DroidSerif';
+  font-family: 'DroidSerif',Georgia, Cambria, Serif;
   font-weight: normal;
   font-style: normal;
   font-size: em(25, 20);
@@ -200,17 +197,6 @@ h5, .blogger-name {
   width: 149px;
 }
 
-.homer-background {
-  @include outer-container;
-  margin-top: 45px;
-}
-
-.homer-icon {
-  @include span-columns(4);
-  @include shift(4);
-  padding-left: 12px;
-}
-
 .title, .subtitle, .blogger-name {
   @include span-columns(7);
   line-height: 1.5em;
@@ -233,6 +219,22 @@ h5, .blogger-name {
 .blogger-name {
   color: #454545;
 }
+
+
+
+//************* HOMER *****************
+
+.homer-background {
+  @include outer-container;
+  margin-top: 45px;
+}
+
+.homer-icon {
+  @include span-columns(4);
+  @include shift(4);
+  padding-left: 12px;
+}
+
 
 
 
