--- a/app/assets/stylesheets/_checklist.css.scss
+++ b/app/assets/stylesheets/_checklist.css.scss
@@ -45,6 +45,7 @@ $grey_text: #343434;
 
 .logo-text a:hover { 
     color: rgba($grey_text, .88);
+    cursor: pointer;
     text-decoration: none;
   
 }
@@ -117,6 +118,9 @@ h5, .blogger-name {
   font-size: em(16, 20);
   padding-top: 3px;
   color: white;
+  @include media(max-width 1350px) {
+    @include shift(1.35);
+  }
 }
 
 
@@ -163,8 +167,7 @@ h5, .blogger-name {
 
 .blog-tags {
   @include span-columns(7);
-  @include shift(.42);
-  margin-top: 102px;
+  margin-top: 102px; 
   li {
     float: left;
     padding-right: 50px;
@@ -174,11 +177,13 @@ h5, .blogger-name {
 .logo-text, .logo-icon, .date {
   @include span-columns(4);
   margin-top: 55px;
+  text-align: center;
 }
 
 .logo-text {
-  @include span-columns(3);
-  @include shift(0.6);
+  @include media(max-width 1350px) {
+    @include span-columns(3);
+  }  
 }
 
 //*********** SECOND LINE ************
@@ -192,19 +197,28 @@ h5, .blogger-name {
 .logo-background {
   @include span-columns(4);
   padding-bottom: 150px;
+  @include media(max-width 1350px) {
+    @include span-columns(3);
+  }
 }
 
 .logo-icon {
-  @include shift(3.9);
+  @include shift(3.78);
   margin-top: 50px;
   margin-bottom: 30px;
   height: 149px;
   width: 149px;
+  @include media(max-width 1350px) {
+    @include shift(3.15);
+  }
 }
 
 .title, .subtitle, .blogger-name {
   @include span-columns(7);
   line-height: 1.5em;
+  @include media(max-width 1350px) {
+    @include span-columns(8);
+  }
 }
 
 .blogger-name, .title, .subtitle {
@@ -238,6 +252,9 @@ h5, .blogger-name {
   @include span-columns(4);
   @include shift(4);
   padding-left: 12px;
+  @include media(max-width 1350px) {
+    @include shift(3);
+  }
 }
 
 
@@ -256,12 +273,15 @@ h5, .blogger-name {
   @include span-columns(7);
   line-height: 1.5em;
   padding-top: 1.5em;
+  
 }
 
 .date {
   @include span-columns(4);
   margin-top: 50px;
-  text-align: center;
+  @include media(max-width 1350px) {
+    @include span-columns(3);
+  }
 }
 
 
@@ -280,6 +300,9 @@ h5, .blogger-name {
 .check-ordinals {
   @include span-columns(2);
   @include shift(1.8);
+  @include media(max-width 1350px) {
+    @include shift(1.3);
+  }
 }
 
 .check-lines {
@@ -300,6 +323,9 @@ h5, .blogger-name {
   font-size: em(28, 20);
   padding-left: 10px;
   padding-top: 6px;
+  @include media(max-width 1350px) {
+    @include shift(-0.5);
+  }
 }
 
 li.ordinals {
