--- a/app/assets/stylesheets/_checklist.css.scss
+++ b/app/assets/stylesheets/_checklist.css.scss
@@ -61,6 +61,12 @@ span a {
 
 //****************** HEADINGS *************
 
+
+
+.logo-text {
+  @include span-columns(3);
+}
+
 body {
   font-size: 100%;
 }
@@ -70,13 +76,26 @@ h2, h3, h5, .blogger-name {
 }
 
 h1 {
-  font-family: Impact, Source Sans Pro; 
+  font-family: Impact, Source Sans Pro, Sans-Serif; 
   @include header($weight: normal, $size: em(72, 20), $color: $grey_text);
+  @include span-columns(4);
+  @include media(max-width 1350px) {
+    @include span-columns(3);
+  }
+  @include media(max-width 1275px) {
+    @include header($weight: normal, $size: em(60, 20), $color: $grey_text);
+  }
+  @include media(max-width 1000px) {
+    @include header($weight: normal, $size: em(72, 20), $color: $grey_text);
+  }
 }
 
 h2 {
   @include header($weight: 700, $size: em(53, 20), $color: $grey_text);
   letter-spacing: -0.05em; 
+  @include media(max-width 1275px) {
+    @include header($weight: 700, $size: em(45, 20), $color: $grey_text);
+  }
 }
 
 h3 {
@@ -138,6 +157,9 @@ h5, .blogger-name {
   font-weight: normal;
   font-size: em(25, 20);
   color: $grey_text;
+  @include media(max-width 1000px) {
+    font-size: em(22, 20);
+  }
 }
 
 .capital_letter {
@@ -160,27 +182,43 @@ h5, .blogger-name {
 
 .first-line {
   @include outer-container;
+  @include media(max-width 1000px) {
+    @include shift(2);
+  }
 }
 
 .blog-tags {
   @include span-columns(7);
   margin-top: 102px; 
+  @include media(max-width 1000px) {
+    @include shift(0);
+  }
   li {
     float: left;
     padding-right: 50px;
   }
+  @include media(max-width 1000px) {
+    @include span-columns(11);
+    padding-right: 30px;
+  }
 }
 
 .logo-text, .logo-icon, .date {
-  @include span-columns(4);
   margin-top: 55px;
   text-align: center;
 }
 
+
 .logo-text {
+  @include span-columns(4);
   @include media(max-width 1350px) {
     @include span-columns(3);
-  }  
+  }
+  @include media(max-width 1000px) {
+    @include span-columns(12);
+    text-align: left;
+    padding-left: 10px;
+  }
 }
 
 //*********** SECOND LINE ************
@@ -189,25 +227,30 @@ h5, .blogger-name {
   @include outer-container;
   z-index: 2;
   position: absolute;
+  @include media(max-width 1000px){
+    @include shift(2);
+    
+  }
 }
 
 .logo-background {
   @include span-columns(4);
   padding-bottom: 150px;
+  text-align: center;
   @include media(max-width 1350px) {
     @include span-columns(3);
+  }
+  @include media(max-width 1000px) {
+    display: none;
   }
 }
 
 .logo-icon {
-  @include shift(3.78);
   margin-top: 50px;
   margin-bottom: 30px;
   height: 149px;
   width: 149px;
-  @include media(max-width 1350px) {
-    @include shift(3.15);
-  }
+  
 }
 
 .title, .subtitle, .blogger-name {
@@ -215,6 +258,9 @@ h5, .blogger-name {
   line-height: 1.5em;
   @include media(max-width 1350px) {
     @include span-columns(8);
+  }
+  @include media(max-width 1000px) {
+    @include span-columns(12);
   }
 }
 
@@ -224,6 +270,9 @@ h5, .blogger-name {
 
 .title {
   margin-top: 61px;
+  @include media(max-width 1000px) {
+    margin-top: 45px;
+  }
 }
 
 .subtitle {
@@ -252,6 +301,10 @@ h5, .blogger-name {
   @include media(max-width 1350px) {
     @include shift(3);
   }
+  @include media(max-width 1000px) {
+    @include span-columns(5);
+    @include shift(2);
+  }
 }
 
 
@@ -270,7 +323,11 @@ h5, .blogger-name {
   @include span-columns(7);
   line-height: 1.5em;
   padding-top: 1.5em;
-  
+  @include media(max-width 1000px) {
+    @include shift(2);
+    @include span-columns(9);
+    margin-top: 20px;
+  }
 }
 
 .date {
@@ -278,6 +335,13 @@ h5, .blogger-name {
   margin-top: 50px;
   @include media(max-width 1350px) {
     @include span-columns(3);
+  }
+  @include media(max-width 1000px) {
+    @include span-columns(4);
+    @include shift(2);
+    margin-top: -25px;
+    padding-left: 10px;
+    text-align: left;
   }
 }
 
@@ -287,6 +351,10 @@ h5, .blogger-name {
 
 .fourth-block {
   margin-top: 45px;
+  @include media(max-width 1000px) {
+    @include shift(.95);
+    margin-top: 60px;
+  }
 }
 
 .wrapper {
@@ -305,6 +373,9 @@ h5, .blogger-name {
 .check-lines {
   @include span-columns(8);
   margin-left: -11px;
+  @include media(max-width 1000px) {
+    @include span-columns(12);
+  }
 }
 
 .ordinals, .list {
@@ -322,6 +393,13 @@ h5, .blogger-name {
   padding-top: 6px;
   @include media(max-width 1350px) {
     @include shift(-0.5);
+  }
+  @include media(max-width 1275px) {
+    @include shift(.52);
+  }
+  @include media(max-width 1000px) {
+    @include shift(1.16);
+    font-size: em(22, 20)
   }
 }
 
