--- a/app/views/pages/checklist.html.erb
+++ b/app/views/pages/checklist.html.erb
@@ -11,6 +11,11 @@
   <div class="content">
 
       <div class="first-line">
+        <div class="small-logo-background">
+          <figure class="small-logo">
+          <%= image_tag "smashbot-logo.png", :class => "logo-icon" %>
+          </figure>
+        </div>
         <h1 class="logo-text"><a>smashbot</a></h1>
           <section>
             <ul class="blog-tags">
